@@ -42,6 +42,11 @@ sub create_makefile_pl {
 
   print {$fh} "# Note: this file was auto-generated by ", __PACKAGE__, " version $VERSION\n";
   my $subclass_dir = $package->subclass_dir($build);
+  if (File::Spec->file_name_is_absolute($subclass_dir)) {
+    $build->log_warn("Warning: builder subclass " . ref($build) . 
+		     " was loaded with an absolute path, but should use a" .
+		     " relative path for wide distribution");
+  }
   
   if ($type eq 'small') {
     printf {$fh} <<'EOF', $subclass_dir, ref($build), ref($build);
